fixed to be added as dependency and autoconfigurable

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,13 @@
+# SAMPLE
+azurespringcloud:
+  cloud-type: "Azure"
+  max-age-minutes: 720
+  service-type: "AzureFrontDoor.Backend"
+
+
 # Set application level configuration.
-application:
-  message: Configured by Spring Cloud Config Server
+# application:
+#   message: Configured by Spring Cloud Config Server
 
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.webserver.use-behind-a-proxy-server
 #server:
@@ -11,7 +18,6 @@ application:
 # See https://cloud.spring.io/spring-cloud-gateway/reference/html/#log-levels.
 logging:
   level:
-    com.example.demo: DEBUG
     org.springframework.cloud.gateway: DEBUG
     #org.springframework.http.server.reactive: DEBUG
     #org.springframework.web.reactive: DEBUG
